--- a/Recommendation System/Collaborative Filtering Based Recommendation/Collaborative Based Recommendation.ipynb
+++ b/Recommendation System/Collaborative Filtering Based Recommendation/Collaborative Based Recommendation.ipynb
@@ -1326,7 +1326,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open(saved_model,'wb') as f:\n",
+    "    print(f)\n",
+    "# This will give you the encoding format,copy the encodinh format and then run the below command:                                                                                                    \n",
+    "with open(saved_model,'rb') as f:\n",
+    "    ml_model = pickle.load()\n",
+    "          "
+   ]
   }
  ],
  "metadata": {
